--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <link rel="stylesheet" href="./node_modules/@mdi/font/css/materialdesignicons.min.css">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./main.css">
 </head>
 <body>
   <div class="template-content d-flex">
